--- a/v2/requirements.txt
+++ b/v2/requirements.txt
@@ -1,5 +1,18 @@
-pydantic
-faker
-pyyaml
-rich
-python-dotenv
+pydantic>=1.10.0
+faker>=18.0.0
+pyyaml>=6.0.0
+rich>=13.0.0
+python-dotenv>=1.0.0
+fastapi>=0.95.0
+uvicorn>=0.21.0
+sqlalchemy>=2.0.0
+alembic>=1.10.0
+psycopg2-binary>=2.9.0
+python-jose[cryptography]>=3.3.0
+passlib[bcrypt]>=1.7.4
+python-multipart>=0.0.5
+google-cloud-secret-manager>=2.16.0
+authlib>=1.0.0
+python-dateutil>=2.8.2
+pandas>=1.5.0
+numpy>=1.24.0
