--- a/v2/app/requirements.txt
+++ b/v2/app/requirements.txt
@@ -6,6 +6,7 @@ python-dotenv>=1.0.0
 fastapi>=0.95.0
 uvicorn>=0.21.0
 sqlalchemy>=2.0.0
+sqlmodel>=0.0.8
 alembic>=1.10.0
 psycopg2-binary>=2.9.0
 python-jose[cryptography]>=3.3.0
@@ -16,3 +17,7 @@ authlib>=1.0.0
 python-dateutil>=2.8.2
 pandas>=1.5.0
 numpy>=1.24.0
+scikit-learn>=1.0.0
+httpx>=0.23.0
+clickhouse-driver>=0.2.0
+cryptography>=3.4.0
