--- a/v2/app/requirements.txt
+++ b/v2/app/requirements.txt
@@ -1,7 +1,6 @@
 pydantic>=1.10.0
 faker>=18.0.0
 pyyaml>=6.0.0
-rich>=13.0.0
 python-dotenv>=1.0.0
 fastapi>=0.95.0
 uvicorn>=0.21.0
@@ -19,5 +18,5 @@ pandas>=1.5.0
 numpy>=1.24.0
 scikit-learn>=1.0.0
 httpx>=0.23.0
-clickhouse-driver>=0.2.0
+clickhouse-connect
 cryptography>=3.4.0
