--- a/v2/frontend/src/netra-frontend-v2/package.json
+++ b/v2/frontend/src/netra-frontend-v2/package.json
@@ -13,7 +13,9 @@
     "next": "15.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "zustand": "^5.0.7"
+    "zustand": "^5.0.7",
+    "@nextui-org/react": "^2.2.9",
+    "framer-motion": "^10.16.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
