--- a/v2/frontend/components.json
+++ b/v2/frontend/components.json
@@ -5,16 +5,16 @@
   "tsx": true,
   "tailwind": {
     "config": "tailwind.config.ts",
-    "css": "src/app/globals.css",
+    "css": "/app/globals.css",
     "baseColor": "neutral",
     "cssVariables": true,
     "prefix": ""
   },
   "aliases": {
     "components": "@/app/components",
-    "utils": "@/lib/utils",
+    "utils": "@/app/lib/utils",
     "ui": "@/app/components/ui",
-    "lib": "@/lib",
+    "lib": "@/app/lib",
     "hooks": "@/hooks"
   },
   "iconLibrary": "lucide"
