--- a/v2/frontend/tsconfig.json
+++ b/v2/frontend/tsconfig.json
@@ -20,8 +20,8 @@
     ],
     "paths": {
       "@/*": ["./app/*"],
-      "@/app/components/*": ["./app/components/*"],
-      "@/app/lib/*": ["./app/lib/*"]
+      "@/components/*": ["./app/components/*"],
+      "@/lib/*": ["./app/lib/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
