--- a/v2/config.yaml
+++ b/v2/config.yaml
@@ -1,81 +1,67 @@
+
+# Configuration for the Synthetic Log Generator
+# This file controls the behavior of the data generation process.
+
+# --- General Settings ---
 generation_settings:
-  num_traces: 10000
+  # Default number of traces to generate if not specified via command line.
+  num_traces: 5
+  # The distribution of different trace types to generate. Values should sum to 1.0.
   trace_distribution:
-    simple_chat: 0.25
-    rag_pipeline: 0.25
-    tool_use: 0.25
-    multi_turn_tool_use: 0.20
-    failed_request: 0.05
-overrides: {}
+    simple_chat: 0.3
+    rag_pipeline: 0.3
+    tool_use: 0.2
+    failed_request: 0.1
+    multi_turn_tool_use: 0.1
+
+# --- Realism Engine Settings ---
+# These settings control the data generated for various fields.
 realism:
+  # List of possible applications and services to simulate.
   applications:
-  - app_name: customer-support-chatbot
-    services:
-    - intent-classifier
-    - chat-responder
-    - history-summarizer
-  - app_name: marketing-copy-generator
-    services:
-    - headline-generator
-    - body-text-creator
-    - seo-analyzer
-  - app_name: internal-doc-search
-    services:
-    - query-parser
-    - retrieval-engine
-    - answer-generator
-  - app_name: financial-forecasting-agent
-    services:
-    - data-retrieval-tool
-    - time-series-analyzer
-    - report-generator
+    - app_name: "customer-support-chatbot"
+      services: ["intent-classifier", "chat-responder", "history-summarizer"]
+    - app_name: "marketing-copy-generator"
+      services: ["headline-generator", "body-text-creator", "seo-analyzer"]
+    - app_name: "internal-doc-search"
+      services: ["query-parser", "retrieval-engine", "answer-generator"]
+  
+  # List of possible model providers and their models.
+  # Pricing is in USD per 1 Million tokens (prompt, completion).
   models:
-  - family: gpt-4
-    name: gpt-4o
-    pricing:
-    - 5.0
-    - 15.0
-    provider: openai
-    version_id: gpt-4o-2024-08-06
-  - family: gpt-4
-    name: gpt-4-turbo
-    pricing:
-    - 10.0
-    - 30.0
-    provider: openai
-    version_id: gpt-4-turbo-2024-04-09
-  - family: claude-3
-    name: claude-3-opus
-    pricing:
-    - 15.0
-    - 75.0
-    provider: anthropic
-    version_id: claude-3-opus-20240229
-  - family: claude-3
-    name: claude-3-sonnet
-    pricing:
-    - 3.0
-    - 15.0
-    provider: anthropic
-    version_id: claude-3-sonnet-20240229
-  - family: gemini-1.5
-    name: gemini-1.5-pro
-    pricing:
-    - 3.5
-    - 10.5
-    provider: google
-    version_id: null
-  - family: llama-3.1
-    name: llama-3.1-70b-instruct
-    pricing:
-    - 0.59
-    - 0.79
-    provider: vllm
-    version_id: null
-  - family: llama-3.1
-    name: llama-3.1-8b-instruct
-    pricing:
-    - 0.2
-    - 0.2
-    provider: vllm
-    version_id: null
+    - provider: "openai"
+      family: "gpt-4"
+      name: "gpt-4o"
+      version_id: "gpt-4o-2024-08-06"
+      pricing: [5.00, 15.00]
+    - provider: "anthropic"
+      family: "claude-3"
+      name: "claude-3-opus"
+      version_id: "claude-3-opus-20240229"
+      pricing: [15.00, 75.00]
+    - provider: "google"
+      family: "gemini-2.0"
+      name: "gemini-2.0-flash"
+      version_id: null
+      pricing: [0.35, 0.70]
+    - provider: "vllm"
+      family: "llama-3.1"
+      name: "llama-3.1-70b-instruct"
+      version_id: null
+      pricing: [0.50, 0.50] # Example self-hosted cost
+
+# --- Customer Overrides ---
+# Use this section to force specific values for any field in the log schema.
+# This is powerful for tailoring the data to a specific customer's environment.
+# The keys should match the structure of the UnifiedLogEntry schema.
+# Example:
+# overrides:
+#   identity_context:
+#     organization_id: "acme-corp-xyz"
+#   application_context:
+#     environment: "production"
+#   finops:
+#     attribution:
+#       cost_center_id: "R&D-AI-Division"
+
+overrides: {}
