--- a/v2/app/migration/alembic.ini
+++ b/v2/app/migration/alembic.ini
@@ -52,4 +52,4 @@ datefmt = %H:%M:%S
 # It should be loaded from an environment variable to avoid hardcoding credentials.
 # Before running alembic, ensure the DATABASE_URL environment variable is set.
 # Example: export DATABASE_URL="postgresql://user:pass@host/dbname"
-sqlalchemy.url = %(DATABASE_URL)s
+sqlalchemy.url = postgresql+asyncpg://postgres:123@localhost/netra
