--- a/v2/frontend/package.json
+++ b/v2/frontend/package.json
@@ -42,16 +42,26 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "broadcast-channel": "^7.1.0",
+    "cross-fetch": "^4.1.0",
     "cypress": "^14.5.3",
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^30.0.5",
+    "msw": "^2.10.4",
     "start-server-and-test": "^2.0.13",
     "tailwindcss": "^4",
     "ts-jest": "^29.4.1",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5",
-    "wait-on": "^8.0.4"
+    "wait-on": "^8.0.4",
+    "web-streams-polyfill": "^4.1.0",
+    "whatwg-fetch": "^3.6.20"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
