--- a/v2/app/migration/alembic.ini
+++ b/v2/app/migration/alembic.ini
@@ -3,14 +3,8 @@
 
 [alembic]
 # path to migration scripts
-script_location = C:\Users\antho\OneDrive\Desktop\Netra\netra-core-generation-1\v2\app\migration\alembic
-
-# Template for new migration files
-# file_template = %%(rev)s_%%(slug)s
-
-# sys.path path, will be prepended to sys.path if present.
-# E.g. .
-prepend_sys_path = .
+script_location = C:/Users/antho/OneDrive/Desktop/Netra/netra-core-generation-1/v2/app/migration/alembic
+prepend_sys_path = ..
 
 # Logging configuration
 [loggers]
