--- a/v2/app/pytest.ini
+++ b/v2/app/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-env = 
-    TESTING=True
-    APP_ENV=testing
+asyncio_mode = auto
+asyncio_default_fixture_loop_scope = function
+addopts = -sv --tb=short
