--- a/v2/app/pytest.ini
+++ b/v2/app/pytest.ini
@@ -1,4 +1,7 @@
 [pytest]
 asyncio_mode = auto
 asyncio_default_fixture_loop_scope = function
-addopts = --tb=auto
+addopts = --tb=short
+log_cli = true
+log_cli_level = WARNING
+log_cli_format = %(message)s
