customize and improve deep agents

--- a/v2/app/requirements.txt
+++ b/v2/app/requirements.txt
@@ -3,7 +3,9 @@ pydantic-settings==2.10.1
 faker>=18.0.0
 pyyaml>=6.0.0
 python-dotenv>=1.0.0
-fastapi>=0.95.0
+langchain-openai
+fastapi
+
 uvicorn>=0.21.0
 sqlalchemy>=2.0.0
 sqlmodel>=0.0.8
