--- a/v2/app/migration/alembic.ini
+++ b/v2/app/migration/alembic.ini
@@ -4,7 +4,7 @@
 [alembic]
 # path to migration scripts
 script_location = C:/Users/antho/OneDrive/Desktop/Netra/netra-core-generation-1/v2/app/migration/alembic
-prepend_sys_path = ..
+prepend_sys_path = C:/Users/antho/OneDrive/Desktop/Netra/netra-core-generation-1/v2
 
 # Logging configuration
 [loggers]
