--- a/v2/frontend/package.json
+++ b/v2/frontend/package.json
@@ -38,7 +38,6 @@
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
-    "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
     "@types/node": "^20",
@@ -51,6 +50,7 @@
     "eslint-config-next": "15.4.4",
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^30.0.5",
+    "jest-fetch-mock": "^3.0.3",
     "msw": "^2.10.4",
     "start-server-and-test": "^2.0.13",
     "tailwindcss": "^4",
