--- a/v2/app/pytest.ini
+++ b/v2/app/pytest.ini
@@ -1,7 +1,32 @@
 [pytest]
-asyncio_mode = auto
-asyncio_default_fixture_loop_scope = function
+asynciomode = auto
+asynciodefaultfixtureloop_scope = function
 addopts = --tb=short
-log_cli = true
-log_cli_level = WARNING
-log_cli_format = %(message)s
+logcli = true
+logcli_level = WARNING
+logcli_format = %(message)s
+
+[coverage:run]
+source = app
+
+[coverage:report]
+# Regexes for lines to exclude from consideration
+exclude_lines =
+    # Have to re-enable the standard pragma
+    pragma: no cover
+
+    # Don't complain about missing debug-only code:
+    def __repr__(self):
+    def __str__(self):
+
+    # Don't complain if tests don't hit defensive assertion code:
+    raise AssertionError
+    raise NotImplementedError
+
+    # Don't complain if non-runnable code isn't run:
+    if __name__ == .__main__.:
+
+    # Don't complain about abstract methods, they aren't run:
+    @abstractmethod
+
+ignore_errors = True
