--- a/v2/app/pytest.ini
+++ b/v2/app/pytest.ini
@@ -1,10 +1,10 @@
 [pytest]
-asynciomode = auto
-asynciodefaultfixtureloop_scope = function
+asyncio_mode = auto
+asyncio_default_fixture_loop_scope = function
 addopts = --tb=short
-logcli = true
-logcli_level = WARNING
-logcli_format = %(message)s
+log_cli = true
+log_cli_level = WARNING
+log_cli_format = %(message)s
 
 [coverage:run]
 source = app
