--- a/v2/frontend/package.json
+++ b/v2/frontend/package.json
@@ -35,6 +35,7 @@
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-json-view-lite": "^2.4.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.7"
