--- a/v2/frontend/package.json
+++ b/v2/frontend/package.json
@@ -31,6 +31,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "immer": "^10.1.1",
+    "jest-websocket-mock": "^2.5.0",
     "langchain": "^0.3.30",
     "lucide-react": "^0.525.0",
     "next": "15.4.4",
