--- a/v2/frontend/package.json
+++ b/v2/frontend/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@testing-library/react-hooks": "^8.0.1",
     "@uiw/react-json-view": "^2.0.0-alpha.34",
     "ai": "^5.0.5",
     "class-variance-authority": "^0.7.1",
