--- a/v2/frontend/package.json
+++ b/v2/frontend/package.json
@@ -69,6 +69,7 @@
     "start-server-and-test": "^2.0.13",
     "tailwindcss": "^4",
     "ts-jest": "^29.4.1",
+    "ts-node": "^10.9.2",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5",
     "wait-on": "^8.0.4",
