--- a/v2/frontend/tsconfig.json
+++ b/v2/frontend/tsconfig.json
@@ -21,8 +21,14 @@
     "paths": {
       "@/*": ["./*"],
       "@/components/*": ["./components/*"],
+      "@/contexts/*": ["./contexts/*"],
+      "@/hooks/*": ["./hooks/*"],
       "@/lib/*": ["./lib/*"],
-      "@/services/*": ["./services/*"]
+      "@/mocks/*": ["./mocks/*"],
+      "@/providers/*": ["./providers/*"],
+      "@/services/*": ["./services/*"],
+      "@/store/*": ["./store/*"],
+      "@/types/*": ["./types/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
