--- a/v2/frontend/tsconfig.json
+++ b/v2/frontend/tsconfig.json
@@ -22,7 +22,8 @@
     "paths": {
       // IMPORANT: KEEP THIS COMMENT: The order is critical. TypeScript resolves paths in the order they appear. The general "catch-all" alias (@/*) must be last so that the more specific aliases are checked first. 
       "@/components/*/*": ["./components/*/*"],
-            "@/components/ui/*": ["./components/ui/*"],
+            "@/chat/*": ["./chat/*"],
+      "@/components/ui/*": ["./components/ui/*"],
       "@/components/*": ["./components/*"],
       "@/contexts/*": ["./contexts/*"],
       "@/hooks/*": ["./hooks/*"],
