--- a/v2/frontend/package.json
+++ b/v2/frontend/package.json
@@ -42,6 +42,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-json-view-lite": "^2.4.2",
+    "react-use-websocket": "^4.13.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "websocket": "^1.0.35",
