--- a/v2/frontend/tsconfig.json
+++ b/v2/frontend/tsconfig.json
@@ -26,8 +26,10 @@
       "@/components/*": ["./components/*"],
       "@/contexts/*": ["./contexts/*"],
       "@/hooks/*": ["./hooks/*"],
+      "@/lib/*": ["./lib/*"],
       "@/mocks/*": ["./mocks/*"],
       "@/services/*": ["./services/*"],
+      "@/store/*": ["./store/*"],
       "@/types/*": ["./types/*"],
       "@/*": ["./*"]
     }
