--- a/v2/frontend/tsconfig.json
+++ b/v2/frontend/tsconfig.json
@@ -30,7 +30,7 @@
       "@/services/*": ["./services/*"],
       "@/store/*": ["./store/*"],
       "@/types/*": ["./types/*"],
-      "@/auth/*": ["./src/auth/*"],
+      "@/auth/*": ["./auth/*"],
       "@/*": ["./*"]
     }
   },
