--- a/v2/frontend/package.json
+++ b/v2/frontend/package.json
@@ -34,6 +34,7 @@
     "ai": "^5.0.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
     "immer": "^10.1.1",
     "jest-websocket-mock": "^2.5.0",
     "langchain": "^0.3.30",
