--- a/v2/frontend/package.json
+++ b/v2/frontend/package.json
@@ -37,6 +37,7 @@
     "framer-motion": "^12.23.12",
     "immer": "^10.1.1",
     "jest-websocket-mock": "^2.5.0",
+    "jwt-decode": "^4.0.0",
     "langchain": "^0.3.30",
     "lucide-react": "^0.525.0",
     "next": "15.4.4",
