--- a/v2/frontend/package.json
+++ b/v2/frontend/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "test": "jest",
     "cypress:open": "cypress open",
-    "cy:run": "npm run dev & wait-on http://localhost:3000 && cypress run"
+    "cy:run": "start-server-and-test dev http://localhost:3000 cypress:run",
+    "cypress:run": "cypress run"
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.4",
