--- a/v2/pytest.ini
+++ b/v2/pytest.ini
@@ -1,4 +1,8 @@
 [pytest]
 asyncio_mode = auto
-env = 
-    TESTING=1
+testpaths = tests
+python_files = test_*.py
+python_classes = Test*
+python_functions = test_*
+addopts = --tb=short -v --disable-warnings --failed-first -rf -n auto
+asyncio_default_fixture_loop_scope = function
