--- a/v2/pytest.ini
+++ b/v2/pytest.ini
@@ -4,5 +4,5 @@ testpaths = tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
-addopts = --tb=short -v --disable-warnings --failed-first -rf -n auto
+addopts = --tb=short -v --disable-warnings --failed-first -rf
 asyncio_default_fixture_loop_scope = function
