--- a/v2/app/pytest.ini
+++ b/v2/app/pytest.ini
@@ -5,6 +5,8 @@ addopts = --tb=short
 log_cli = true
 log_cli_level = WARNING
 log_cli_format = %(message)s
+markers =
+    smoke: marks tests as smoke tests (quick validation tests)
 
 [coverage:run]
 source = app
