--- a/v2/pytest.ini
+++ b/v2/pytest.ini
@@ -6,3 +6,5 @@ python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
 addopts = --tb=short -v --disable-warnings --failed-first -rf
+markers =
+    smoke: marks tests as smoke tests (quick validation tests)
