--- a/v2/pytest.ini
+++ b/v2/pytest.ini
@@ -8,3 +8,4 @@ python_functions = test_*
 addopts = --tb=short -v --disable-warnings --failed-first -rf
 markers =
     smoke: marks tests as smoke tests (quick validation tests)
+addopts = -n auto  # Enable parallel test execution
