--- a/v2/frontend/package.json
+++ b/v2/frontend/package.json
@@ -34,6 +34,7 @@
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
     "@testing-library/react-hooks": "^8.0.1",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@uiw/react-json-view": "^2.0.0-alpha.34",
     "ai": "^5.0.5",
     "class-variance-authority": "^0.7.1",
@@ -42,6 +43,7 @@
     "immer": "^10.1.1",
     "jest-websocket-mock": "^2.5.0",
     "jwt-decode": "^4.0.0",
+    "katex": "^0.16.22",
     "langchain": "^0.3.30",
     "lucide-react": "^0.525.0",
     "next": "15.4.4",
@@ -49,7 +51,12 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-json-view-lite": "^2.4.2",
+    "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^15.6.1",
     "react-use-websocket": "^4.13.0",
+    "rehype-katex": "^7.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "websocket": "^1.0.35",
