--- a/alembic.ini
+++ b/alembic.ini
@@ -50,7 +50,7 @@ version_path_separator = os  # Use os.pathsep.
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = driver://user:pass@localhost/dbname
+sqlalchemy.url = postgresql+psycopg2://postgres:123@localhost/netra
 
 
 [post_write_hooks]
