--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,8 @@
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
     "@testing-library/react-hooks": "^8.0.1",
+    "@types/html2canvas": "^0.5.35",
+    "@types/papaparse": "^5.3.16",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@uiw/react-json-view": "^2.0.0-alpha.34",
     "ai": "^5.0.5",
@@ -41,14 +43,17 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
+    "html2canvas": "^1.4.1",
     "immer": "^10.1.1",
     "jest-websocket-mock": "^2.5.0",
+    "jspdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
     "katex": "^0.16.22",
     "langchain": "^0.3.30",
     "lucide-react": "^0.525.0",
     "next": "15.4.4",
     "next-themes": "^0.4.6",
+    "papaparse": "^5.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-json-view-lite": "^2.4.2",
