--- a/app/pytest.ini
+++ b/app/pytest.ini
@@ -6,6 +6,8 @@ log_cli_level = WARNING
 log_cli_format = %(message)s
 markers =
     smoke: marks tests as smoke tests (quick validation tests)
+    stress: marks tests as stress tests (high load/scale tests)
+    slow: marks tests as slow tests (long-running tests)
 
 [coverage:run]
 source = app
