--- a/.github/workflows/staging-environment.yml
+++ b/.github/workflows/staging-environment.yml
@@ -22,7 +22,7 @@ env:
   GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
   GCP_REGION: us-central1
   TERRAFORM_VERSION: 1.5.0
-  STAGING_DOMAIN: staging.netra-ai.dev
+  STAGING_DOMAIN: staging.netrasystems.ai
 
 jobs:
   check-eligibility:
