--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -18,7 +18,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy application code
 COPY app/ ./app/
 COPY alembic/ ./alembic/
-COPY alembic.ini .
+COPY config/alembic.ini ./alembic.ini
 
 # Set environment variables
 ENV PYTHONUNBUFFERED=1
