--- a/frontend/Dockerfile.frontend
+++ b/frontend/Dockerfile.frontend
@@ -6,7 +6,7 @@ WORKDIR /app
 
 # Copy package files
 COPY package*.json ./
-RUN npm ci --only=production
+RUN npm ci --legacy-peer-deps
 
 # Copy application code
 COPY . .
